# voice-assistant

./: .env  README.md  app.py  chatGPT.py  coqui.py  gpt4.py  jarvis.py  main.py  pyproject.toml  requirements.txt  whisperer.py
extras/: coqui_tts.py  gpt_functions.json
static/: styles.css
templates/: index.html
